Bug 458770 - "Remove Hold Frame" and "Remove Hold Column" returns the frame selector to the first frame
Summary: "Remove Hold Frame" and "Remove Hold Column" returns the frame selector to th...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 5.1.0
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-06 01:59 UTC by draketheyoshi
Modified: 2022-09-07 14:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description draketheyoshi 2022-09-06 01:59:44 UTC
When using the Animation Timeline, using either "Remove Hold Frame" or "Remove Hold Column" will cause the frame selector to go back to the first frame. "Insert Hold Frame" and "Insert Hold Column" seem to work normally. 

STEPS TO REPRODUCE
1. Set "Remove Hold Frame" and "Remove Hold Column" shortcuts to any free key.
2. Use these shortcuts to remove a hold frame or column of hold frames.

OBSERVED RESULT
The frame selector goes all the way back to the beginning of the timeline.

EXPECTED RESULT
The frame selector should stay in place like it does when using "Insert Hold Frame" and "Insert Hold Column".

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 22.04.1 LTS
(available in About System)
KDE Plasma Version: 5.24.6
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3
Comment 1 Emmet O'Neill 2022-09-07 02:59:44 UTC
Git commit 05ab52b92547b21071a09fcfea5ef801ed5d2046 by Emmet O'Neill.
Committed on 07/09/2022 at 02:57.
Pushed by emmetoneill into branch 'master'.

Animation: Hold frame/column removal selection improvement.

Removing hold frames and columns now selects the previous frame instead
of jumping back to the last keyframe. Previous behavior was a bit
confusing looking.

M  +1    -1    plugins/dockers/animation/KisAnimTimelineFramesModel.cpp
M  +1    -21   plugins/dockers/animation/KisAnimTimelineFramesView.cpp

https://invent.kde.org/graphics/krita/commit/05ab52b92547b21071a09fcfea5ef801ed5d2046
Comment 2 Emmet O'Neill 2022-09-07 03:01:38 UTC
Yeah, the previous behavior had it jumping back to the key frame, which definitely was a bit funky!

Thanks for the nice report, drake! :)
Comment 3 draketheyoshi 2022-09-07 14:42:57 UTC
(In reply to Emmet O'Neill from comment #2)
> Yeah, the previous behavior had it jumping back to the key frame, which
> definitely was a bit funky!
> 
> Thanks for the nice report, drake! :)

No problem, thanks for fixing it so quickly! ^^