Animation: Hold frame/column removal selection improvement.

Removing hold frames and columns now selects the previous frame instead
of jumping back to the last keyframe. Previous behavior was a bit
confusing looking.

BUG:458770